--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,6 +15,19 @@
         overflow-x: hidden;
       }
     </style>
+    <script>
+      //on pageshow set the color theme
+      window.addEventListener("pageshow", function () {
+        let theme = localStorage.getItem("theme-preference");
+
+        if (!theme) theme = "light";
+
+        localStorage.setItem("theme-preference", theme);
+
+        document.documentElement.className = theme;
+      })
+
+    </script>
   </head>
 
   <body>
