--- a/views/room.handlebars
+++ b/views/room.handlebars
@@ -24,10 +24,11 @@
           <div class="px-3 pt-1">
 
             <form class="d-flex justify-content-center position-relative border rounded" id="chat-form">
-              <input type="text" class="p-3 border-0 input-styles w-90" placeholder="message # {{roomname}}"
+              <i class="fa fa-code  position-absolute code-icon" id="code-block"></i>
+              <input type="text" class="p-3 ps-4 border-0 input-styles w-90" placeholder="message # {{roomname}}" 
                 aria-label="Recipient's username" aria-describedby="basic-addon2" id="chat-input" />
               <button type="submit">
-                <i class="fa fa-lg fa-paper-plane position-absolute p-2 send-icon"></i>
+                <i class="fa fa-lg fa-paper-plane position-absolute p-2 send-icon" id="send-icon"></i>
               </button>
             </form>
             
