--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -77,9 +77,9 @@
 
       <div class="" id="Theme" style="display: none;">
         <h2 class="border-bottom pb-2">Theme</h2>
-        <div class="col-md-6">
+        <div class="col-md-6 mt-2">
           <label for="theme select">Choose your preferred theme</label>
-          <select class="form-select" aria-label="theme select" id="theme-toggler">
+          <select class="form-select mt-1" aria-label="theme select" id="theme-toggler">
             <option value="light">Light</option>
             <option value="dark">Dark</option>
             <option value="one-dark-pro">One dark pro</option>
@@ -94,21 +94,21 @@
 
         <form id="edit-user-info">
 
-          <div class="row">
+          <div class="row mt-3">
 
             <div>
 
-              <div class="col-12 col-lg-7">
-                <div class="form-group">
-                  <label for="settings-user-name">Username</label>
-                  <input type="text" class="form-control w-lg-50" id="settings-user-name" aria-describedby="username" />
+              <div class="col-12 col-lg-7 gy-5">
+                <div class="form-group mb-2">
+                  <label for="settings-user-name d-block">Username</label>
+                  <input type="text" class="form-control w-lg-50 mt-1" id="settings-user-name" aria-describedby="username" />
                 </div>
               </div>
 
               <div class="col-12 col-lg-7">
-                <div class="form-group">
+                <div class="form-group mb-2">
                   <label for="github-account">Github username</label>
-                  <input type="text" class="form-control  " id="github-account" aria-describedby="username" />
+                  <input type="text" class="form-control mt-1" id="github-account" aria-describedby="username" />
                 </div>
               </div>
 
@@ -117,11 +117,11 @@
             <div class="col">
               <div class="form-group">
                 <label for="settings-pfp">Profile Picture</label>
-                <button class="btn btn-outline-info d-block" id="generate-pfp" type="none">GenerateNewPfp</button>
+                <button class="btn btn-outline-info d-block mt-1" id="generate-pfp" type="none">GenerateNewPfp</button>
               </div>
               <div class="dropdown mt-2 mb-2 d-block">
                 <label for="">Favorite Langauge</label>
-                <button type="button" class="btn btn-outline-info fav-tech-btn dropdown-toggle d-block my-2"
+                <button type="button" class="btn btn-outline-info fav-tech-btn dropdown-toggle d-block my-1"
                   data-bs-toggle="dropdown" aria-expanded="false">
                   <img height="25px" id="currentFavTech" />
                 </button>
