--- a/views/directmessages.handlebars
+++ b/views/directmessages.handlebars
@@ -7,16 +7,16 @@
       <!-- CHAT -->
       <main class="h-100 container-fluid p-0">
         <div class="h-100">
-          <div class="h-10 d-flex flex-column justify-content-end align-items-start ps-5 border-bottom">
+          <div class="h-10 d-flex justify-content-between align-items-center ps-2 border-bottom">
 
-            <div class="d-flex flex-column gap-2 d-md-none hamburger-menu align-self-end me-5" id="hamburger-menu">
+            <h2 class="room-title " id="room-name"># {{roomname}}</h2>
+
+            <div class="d-flex flex-column gap-1 d-md-none hamburger-menu align-self-center mx-4 me-5-md" id="hamburger-menu">
               <div class="bar"></div>
               <div class="bar"></div>
               <div class="bar"></div>
             </div>
 
-            {{!-- <button id="theme-toggle">toggle</button> --}}
-            <h2 class="room-title " id="room-name"># {{roomname}}</h2>
           </div>
           <ul class="h-80 position-relative custom-overflow list-group list-group-flush px-3" id="messages"></ul>
           <div class="px-3 pt-1">
@@ -74,8 +74,7 @@
         </div>
         {{!--  USER INFO/DM MODAL END  --}}
 
-        <div class="text-end p-2 d-md-none"> <img class="p-2 border-rounded text-end" id="close-sidebar"
-            src="https://cdn-icons-png.flaticon.com/512/87/87251.png" height="40px" style="cursor: pointer;"></img>
+         <div class="text-end p-2 d-md-none"> <span id="close-sidebar" style="cursor: pointer; padding: 5px;"> &#x2715</span>
         </div>
         <div class="d-flex justify-content-center gap-5 mb-5 mt-md-5">
 
