--- a/views/room.handlebars
+++ b/views/room.handlebars
@@ -8,15 +8,16 @@
       <!-- CHAT -->
       <main class="h-100 container-fluid p-0">
         <div class="h-100">
-          <div class="h-10 d-flex flex-column justify-content-end align-items-start ps-5 border-bottom">
+          <div class="h-10 d-flex justify-content-between align-items-center ps-2 border-bottom">
 
-            <div class="d-flex flex-column gap-2 d-md-none hamburger-menu align-self-end me-5" id="hamburger-menu">
+            <h2 class="room-title " id="room-name"># {{roomname}}</h2>
+
+            <div class="d-flex flex-column gap-1 d-md-none hamburger-menu align-self-center mx-4 me-5-md" id="hamburger-menu">
               <div class="bar"></div>
               <div class="bar"></div>
               <div class="bar"></div>
             </div>
 
-            <h2 class="room-title " id="room-name"># {{roomname}}</h2>
           </div>
 
           <ul class="h-80 position-relative custom-overflow list-group list-group-flush px-3" id="messages"></ul>
@@ -25,13 +26,13 @@
 
             <form class="d-flex justify-content-center position-relative border rounded" id="chat-form">
               <i class="fa fa-code  position-absolute code-icon" id="code-block"></i>
-              <input type="text" class="p-3 ps-4 border-0 input-styles w-90" placeholder="message # {{roomname}}" 
+              <input type="text" class="p-3 ps-4 border-0 input-styles w-90" placeholder="message # {{roomname}}"
                 aria-label="Recipient's username" aria-describedby="basic-addon2" id="chat-input" />
               <button type="submit">
                 <i class="fa fa-lg fa-paper-plane position-absolute p-2 send-icon" id="send-icon"></i>
               </button>
             </form>
-            
+
           </div>
         </div>
       </main>
@@ -45,7 +46,7 @@
         {{!--  USER INFO/DM MODAL --}}
         <div class="user-modal-content" id="userInfoModal">
 
-          <div class="fav-color-bg"  id="fav-color-modal"></div>
+          <div class="fav-color-bg" id="fav-color-modal"></div>
 
           <div class="d-relative">
 
@@ -80,8 +81,7 @@
         </div>
         {{!--  USER INFO/DM MODAL END  --}}
 
-        <div class="text-end p-2 d-md-none"> <img class="p-2 border-rounded text-end" id="close-sidebar"
-            src="https://cdn-icons-png.flaticon.com/512/87/87251.png" height="40px" style="cursor: pointer;"></img>
+        <div class="text-end p-2 d-md-none"> <span id="close-sidebar" style="cursor: pointer; padding: 5px;"> &#x2715</span>
         </div>
         <div class="d-flex justify-content-center gap-5 mb-5 mt-md-5">
           <div class="">
