ui fix with delete account modal not center

--- a/views/settings.handlebars
+++ b/views/settings.handlebars
@@ -2,9 +2,9 @@
 {{!-- sidebar --}}
 
 <!-- Delete Account Modal -->
-<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+<div class="modal fade " id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
   aria-labelledby="staticBackdropLabel" aria-hidden="true">
-  <div class="modal-dialog">
+  <div class="modal-dialog m-auto">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="staticBackdropLabel">Are you absolutly sure?</h5>
@@ -42,7 +42,7 @@
             </li>
             <li class="settings-option list-group-item d-flex gap-3 align-items-center py-3">
               <i class="fa fa-comments" aria-hidden="true"></i>
-              <p class="m-0" id="menu-notifications">Notifications</p>
+              <p class="m-0" id="menu-messages">Messages</p>
             </li>
             <li class="settings-option list-group-item d-flex gap-3 align-items-center py-3">
               <i class="fa fa-lock"></i>
@@ -61,8 +61,8 @@
     {{!-- settings main --}}
     <div class="col-6 col-md-8 col-xl-10 py-5 pe-5">
 
-      <div class="" id="Notifications" style="display: none;">
-        <h2 class="border-bottom pb-2">Notifications</h2>
+      <div class="" id="Messages" style="display: none;">
+        <h2 class="border-bottom pb-2">Messages</h2>
         <p class="mt-2">Coming soon</p>
       </div>
       <div class="" id="Privacy" style="display: none;">
