updated routes and room names

--- a/views/directmessages.handlebars
+++ b/views/directmessages.handlebars
@@ -126,12 +126,22 @@
 
                       </li>
                       <li class="list-group-item room-list-styles d-flex gap-1">
-                        # HTML and CSS
+                        # HTML
+
+                      </li>
+
+                       <li class="list-group-item room-list-styles d-flex gap-1">
+                        # CSS
 
                       </li>
 
                       <li class="list-group-item room-list-styles d-flex gap-1">
                         # JavaScript
+
+                      </li>
+
+                       <li class="list-group-item room-list-styles d-flex gap-1">
+                        # Python
 
                       </li>
 
@@ -147,18 +157,12 @@
                         # C++
 
                       </li>
-                      <li class="list-group-item room-list-styles d-flex gap-1">
-                        # C Sharp
-
-                      </li>
+            
                       <li class="list-group-item room-list-styles d-flex gap-1">
                         # TypeScript
 
                       </li>
-                      <li class="list-group-item room-list-styles d-flex gap-1">
-                        # ObjectiveC
-
-                      </li>
+                     
                       <li class="list-group-item room-list-styles d-flex gap-1">
                         # GoLang
 
